# gh_cherry

./: .gitignore  AUTO_DISCOVERY.md  BUILD.md  Cargo.toml  PLAN.md  README.md  plans.md
.github/workflows/: release.yml
.scripts/: build-cross.sh  build-macos.sh  build-windows.ps1
examples/: auto-discovery-config.toml  dev-config.toml
scripts/: setup.ps1  setup_unix.sh
src/: lib.rs  main.rs  util.rs
src/auth/: mod.rs
src/config/: mod.rs
src/git/: mod.rs
src/github/: mod.rs
src/ui/: app.rs  components.rs  config_selector.rs  events.rs  mod.rs  selector.rs  simple_input.rs  state.rs
tests/: branch_template_tests.rs  config_env_tests.rs  git_ops_tests.rs  util_tests.rs
