[package]
name = "gh_cherry"
version = "0.0.3"
edition = "2021"
authors = ["ArunPrakashG <arun.prakash.456789@gmail.com>"]
description = "A TUI application for cherry-picking GitHub PRs to target branches"
license = "MIT"
repository = "https://github.com/ArunPrakashG/gh_cherry"
keywords = ["github", "git", "cherry-pick", "tui", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# GitHub API client
octocrab = "0.44.1"

# Git operations
git2 = "0.20.2"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Async traits
async-trait = "0.1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
dirs = "5.0"

# Terminal color support
color-eyre = "0.6"

# Regular expressions for tag matching
regex = "1.0"

# URL parsing
url = "2.0"

[dev-dependencies]
tempfile = "3.10"
